pkg/front_end/testcases/inference/propagate_inference_transitively.dart.strong.transformed.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/propagate_inference_transitively.dart:14:57: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
// Try changing the type of the left hand side, or casting the right hand side to 'int'.
//   a1. /*@target=A::x*/ x = /*error:INVALID_ASSIGNMENT*/ "hi";
//                                                         ^
//
// pkg/front_end/testcases/inference/propagate_inference_transitively.dart:17:57: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
// Try changing the type of the left hand side, or casting the right hand side to 'int'.
//   a2. /*@target=A::x*/ x = /*error:INVALID_ASSIGNMENT*/ "hi";
//                                                         ^
//
import self as self;
import "dart:core" as core;

class A extends core::Object {
  field core::int x = 2;
  synthetic constructor •() → self::A
    : super core::Object::•()
    ;
}
static method test5() → dynamic {
  self::A a1 = new self::A::•();
  a1.{self::A::x} = let final<BottomType> #t1 = invalid-expression "pkg/front_end/testcases/inference/propagate_inference_transitively.dart:14:57: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
Try changing the type of the left hand side, or casting the right hand side to 'int'.
  a1. /*@target=A::x*/ x = /*error:INVALID_ASSIGNMENT*/ \"hi\";
                                                        ^" in "hi" as{TypeError} core::int;
  self::A a2 = new self::A::•();
  a2.{self::A::x} = let final<BottomType> #t2 = invalid-expression "pkg/front_end/testcases/inference/propagate_inference_transitively.dart:17:57: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
Try changing the type of the left hand side, or casting the right hand side to 'int'.
  a2. /*@target=A::x*/ x = /*error:INVALID_ASSIGNMENT*/ \"hi\";
                                                        ^" in "hi" as{TypeError} core::int;
}
static method main() → dynamic {}
